examples/canary-istio/istio-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-vsvc
spec:
  gateways:
  - canary-gateway
  hosts:
  - canary-istio.play.local.com
  http:
  - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: weather-hyd # referenced in canary.stableService
      weight: 10
    - destination:
        host: weather-ny # referenced in canary.canaryService
      weight: 90
